<!-- @author 刘星星 
	 @createTime 2014/4/2
   	      选择用户类型
   -->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity"
    android:background="@color/activity_bg_color"
    android:orientation="vertical"
     >
	<RelativeLayout android:layout_width="match_parent"
	    android:layout_height="@dimen/title_height"
	    android:background="@color/title_bg_color"
	    >
	    <ImageButton android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:src="@drawable/btn_title_back"
	        android:background="@null"
	        android:padding="10dp"
	        android:layout_centerVertical="true"
	        android:id="@+id/backBtn"
	        />
	    <TextView
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/title_select_usertype" 
	        android:textColor="@color/activity_title_text_color"
	        android:textSize="@dimen/activity_title_text_size"
	        android:layout_centerInParent="true"
	        />
	</RelativeLayout>
	<LinearLayout android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:orientation="horizontal"
	    android:layout_marginTop="30dp"
	    >
	    <LinearLayout android:layout_width="match_parent"
		    android:layout_height="match_parent"
		    android:orientation="vertical"
		    android:layout_weight="1"
		    android:gravity="center"
		    android:id="@+id/typeLayout1"
		    >
		    <ImageView android:layout_width="match_parent"
		        android:layout_height="wrap_content"
		        android:src="@drawable/type_user1"
		        />
		    <TextView android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:text="@string/user_type1"
		        android:textColor="#000000"
		        android:textSize="18sp"
		        android:layout_marginTop="10dp"
		        />
		</LinearLayout>
		<LinearLayout android:layout_width="match_parent"
		    android:layout_height="match_parent"
		    android:orientation="vertical"
		    android:layout_weight="1"
		    android:gravity="center"
		    android:id="@+id/typeLayout2"
		    >
		    <ImageView android:layout_width="match_parent"
		        android:layout_height="wrap_content"
		        android:src="@drawable/type_user2"
		        />
		    <TextView android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:text="@string/user_type2"
		        android:textColor="#000000"
		        android:textSize="18sp"
		        android:layout_marginTop="10dp"
		        />
		</LinearLayout>
		<LinearLayout android:layout_width="match_parent"
		    android:layout_height="match_parent"
		    android:orientation="vertical"
		    android:layout_weight="1"
		    android:gravity="center"
		    android:id="@+id/typeLayout3"
		    >
		    <ImageView android:layout_width="match_parent"
		        android:layout_height="wrap_content"
		        android:src="@drawable/type_user3"
		        />
		    <TextView android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:text="@string/user_type3"
		        android:textColor="#000000"
		        android:textSize="18sp"
		        android:layout_marginTop="10dp"
		        />
		</LinearLayout>
	</LinearLayout>
</LinearLayout>