<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/activity_bg_color"
    >

   <RelativeLayout android:layout_width="match_parent"
       android:layout_height="@dimen/title_height"
       android:padding="5dp"
       android:background="@color/title_bg_color"
       >
       <ImageButton android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:src="@drawable/btn_title_back"
	        android:background="@null"
	        android:padding="10dp"
	        android:layout_centerVertical="true"
	        android:id="@+id/backBtn"
	        />
       <TextView android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:text="注册新用户"
           android:textSize="@dimen/activity_title_text_size"
           android:textColor="@color/activity_title_text_color"
           android:layout_centerInParent="true"
           />
   </RelativeLayout>
   <ScrollView android:layout_width="match_parent"
       android:layout_height="match_parent"
       android:id="@+id/scrollView"
       >
   <LinearLayout 
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/activity_bg_color"
    android:padding="10dp"
    >
	<TextView android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:text="@string/text_phonenumber"
           android:textSize="16sp"
           android:textColor="@color/text_color"
           />
	<RelativeLayout android:layout_width="match_parent"
		    android:layout_height="wrap_content"
		    android:background="@drawable/input_bg"
		    >
		    <ImageButton android:layout_width="30dp"
		        android:layout_height="30dp"
		        android:background="@drawable/close"
		        android:layout_alignParentRight="true"
		        android:layout_marginRight="10dp"
		        android:layout_centerVertical="true"
		        android:id="@+id/deleteUsernameBtn"
		        android:visibility="invisible"
		        />
		    <EditText android:layout_width="match_parent"
		        android:layout_height="wrap_content"
		        android:background="@null"
		        android:hint="@string/hint_input_phone"
		        android:layout_centerVertical="true"
		        android:layout_toLeftOf="@id/deleteUsernameBtn"
		        android:padding="10dp"
		        android:textColor="@color/input_text_color"
		        android:textColorHint="@color/input_hint_color"
		        android:textSize="@dimen/input_text_size"
		        android:id="@+id/input_phone_et"
		        android:inputType="phone"
		        android:maxLength="11"
		        android:singleLine="true"
		        android:text="18917216840"
		        />
		</RelativeLayout>
		<TextView android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:text="@string/text_username_prompt"
           android:textSize="14sp"
           android:textColor="@color/text_color"
           android:layout_marginTop="5dp"
           android:layout_marginLeft="5dp"
           android:id="@+id/userNameTishi"
           android:visibility="gone"
           />
	<TextView android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:text="@string/text_psw"
           android:textSize="16sp"
           android:textColor="@color/text_color"
           android:layout_marginTop="10dp"
           />
	<RelativeLayout android:layout_width="match_parent"
		    android:layout_height="wrap_content"
		    android:background="@drawable/input_bg"
		    >
		    <ImageButton android:layout_width="30dp"
		        android:layout_height="30dp"
		        android:background="@drawable/close"
		        android:layout_alignParentRight="true"
		        android:layout_marginRight="10dp"
		        android:layout_centerVertical="true"
		        android:id="@+id/deletePswBtn"
		        android:visibility="invisible"
		        />
		    <EditText android:layout_width="match_parent"
		        android:layout_height="wrap_content"
		        android:background="@null"
		        android:hint="@string/hint_input_psw"
		        android:layout_centerVertical="true"
		        android:layout_toLeftOf="@id/deletePswBtn"
		        android:padding="10dp"
		        android:textColor="@color/input_text_color"
		        android:textColorHint="@color/input_hint_color"
		        android:textSize="@dimen/input_text_size"
		        android:id="@+id/input_psw_et"
		        android:maxLength="20"
		        android:singleLine="true"
		        android:inputType="textPassword"
		        android:text="18917216840"
		        />
		</RelativeLayout>
		<TextView android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:text="@string/text_sure_psw"
           android:textSize="16sp"
           android:textColor="@color/text_color"
           android:layout_marginTop="10dp"
           />
	<RelativeLayout android:layout_width="match_parent"
		    android:layout_height="wrap_content"
		    android:background="@drawable/input_bg"
		    >
		    <ImageButton android:layout_width="30dp"
		        android:layout_height="30dp"
		        android:background="@drawable/close"
		        android:layout_alignParentRight="true"
		        android:layout_marginRight="10dp"
		        android:layout_centerVertical="true"
		        android:id="@+id/deletesPswBtn"
		        android:visibility="invisible"
		        />
		    <EditText android:layout_width="match_parent"
		        android:layout_height="wrap_content"
		        android:background="@null"
		        android:hint="请重新输入密码"
		        android:layout_centerVertical="true"
		        android:layout_toLeftOf="@id/deletesPswBtn"
		        android:padding="10dp"
		        android:textColor="@color/input_text_color"
		        android:textColorHint="@color/input_hint_color"
		        android:textSize="@dimen/input_text_size"
		        android:id="@+id/input_spsw_et"
		        android:maxLength="20"
		        android:singleLine="true"
		        android:inputType="textPassword"
		        android:text="18917216840"
		        />
		</RelativeLayout>
	<TextView android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:text="@string/text_name"
           android:textSize="16sp"
           android:textColor="@color/text_color"
           android:layout_marginTop="10dp"
           />
	<RelativeLayout android:layout_width="match_parent"
		    android:layout_height="wrap_content"
		    android:background="@drawable/input_bg"
		    >
		<EditText android:layout_width="match_parent"
			        android:layout_height="wrap_content"
			        android:background="@null"
			        android:padding="10dp"
			        android:textColor="@color/input_text_color"
			        android:textColorHint="@color/input_hint_color"
			        android:textSize="@dimen/input_text_size"
			        android:id="@+id/input_name_et"
			        android:singleLine="true"
			        android:hint="请输入您的姓名"
			        android:text="刘星星"
			        />
	</RelativeLayout>
	<TextView android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:text="@string/text_company_name"
           android:textSize="16sp"
           android:textColor="@color/text_color"
           android:layout_marginTop="10dp"
           android:id="@+id/company_text"
           />
	<RelativeLayout android:layout_width="match_parent"
		    android:layout_height="wrap_content"
		    android:background="@drawable/input_bg"
		    >
	<EditText android:layout_width="match_parent"
		        android:layout_height="wrap_content"
		        android:background="@null"
		        android:padding="10dp"
		        android:textColor="@color/input_text_color"
		        android:textColorHint="@color/input_hint_color"
		        android:textSize="@dimen/input_text_size"
		        android:id="@+id/input_company_name_et"
		        android:singleLine="true"
		        android:hint="请输入您公司的名称"
		        android:text="上海擎风网络科技有限公司"
		        />
	</RelativeLayout>
	<LinearLayout android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:orientation="horizontal"
	    >
	    <LinearLayout android:layout_width="match_parent"
		    android:layout_height="wrap_content"
		    android:orientation="vertical"
		    android:layout_weight="1"
		    >
		    <TextView android:layout_width="wrap_content"
		           android:layout_height="wrap_content"
		           android:text="@string/text_code"
		           android:textSize="16sp"
		           android:textColor="@color/text_color"
		           android:layout_marginTop="10dp"
		           />
		    <RelativeLayout android:layout_width="match_parent"
		    android:layout_height="wrap_content"
		    android:background="@drawable/input_bg"
		    >
			<EditText android:layout_width="match_parent"
				   android:layout_height="wrap_content"
				   android:background="@null"
				   android:padding="10dp"
				   android:textColor="@color/input_text_color"
				   android:textColorHint="@color/input_hint_color"
				   android:textSize="@dimen/input_text_size"
				   android:id="@+id/input_code_et"
				   android:singleLine="true"
				   android:hint="请输入验证码"
				   android:text="234567"
		        />
			</RelativeLayout>
		</LinearLayout>
		<LinearLayout android:layout_width="match_parent"
		    android:layout_height="wrap_content"
		    android:orientation="vertical"
		    android:layout_weight="1"
		    android:layout_marginLeft="10dp"
		    >
		    <TextView android:layout_width="wrap_content"
		           android:layout_height="wrap_content"
		           android:text="@string/text_code"
		           android:textSize="16sp"
		           android:textColor="@color/text_color"
		           android:layout_marginTop="10dp"
		           android:visibility="invisible"
		           />
			<TextView android:layout_width="match_parent"
				   android:layout_height="wrap_content"
				   android:background="@drawable/code_bg"
				   android:paddingLeft="2dp"
				   android:paddingRight="2dp"
				   android:paddingTop="10dp"
				   android:paddingBottom="10dp"
				   android:textColor="#000000"
				   android:textColorHint="@color/input_hint_color"
				   android:textSize="14sp"
				   android:id="@+id/text_reget_code"
				   android:singleLine="true"
				   android:text="重新获取验证码(60)"
				   android:gravity="center"
		        />
		</LinearLayout>
	</LinearLayout>
	<LinearLayout android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:orientation="horizontal"
	    >
	    <CheckBox android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="同意拼货网用户注册协议"
	        android:textColor="#0062C3"
	        android:checked="true"
	        android:id="@+id/checkBox"
	        android:textSize="18sp"
	        />
	</LinearLayout>
	<Button android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:text="下一步"
           android:gravity="center"
           android:textSize="@dimen/btn_text_size"
           android:textColor="@color/activity_title_text_color"
           android:layout_marginTop="15dp"
           android:background="@drawable/btn_bg"
           android:padding="10dp"
           android:id="@+id/nextBtn"
           />
	</LinearLayout>
	</ScrollView>
</LinearLayout>